# BinaryOptionsTools-v2

./: .env.example  .gitignore  .gitlab-ci.yml  .runner_system_id  404.html  ACKNOWLEDGMENTS.md  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_IMPROVEMENTS.md  LICENSE  PYPI_SETUP.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  bot-cli.py  codemap.md  config.toml  debug_login.py  docusaurus.config.js  index.html  mkdocs.yml  modify_subs.py  objects.inv  opensearch.xml  package-lock.json  package.json  publish_log.txt  pytest.ini  requirements-docs.txt  sidebars.js  sitemap.xml  test_examples.py  todo.md
.arive-tasks/python-docstrings/crates/core/: Cargo.toml
.arive-tasks/python-docstrings/crates/core/src/: builder.rs  lib.rs  rules.rs  statistics.rs
.arive-tasks/python-docstrings/crates/core/tests/: rule_macro_tests.rs  two_step_standalone.rs
BinaryOptionsToolsUni/: Cargo.toml  README.md  build.rs  test.udl
BinaryOptionsToolsUni/bo2_macros/src/: doc.rs
BinaryOptionsToolsUni/docs_json/: error.json  pocket_option.json  raw_handler.json  stream.json  test.json  types.json
BinaryOptionsToolsUni/src/: error.rs  lib.rs  test.rs  tracing.rs
BinaryOptionsToolsV2/: .gitignore  Cargo.toml  Dockerfile  PYTHON_API_REFERENCE.md  Readme.md  UNIMPLEMENTED.md  build.rs  docs.json  pyproject.toml
BinaryOptionsToolsV2/BinaryOptionsToolsV2/: .gitignore  BinaryOptionsToolsV2.pyi  Cargo.toml  Dockerfile  PYTHON_API_REFERENCE.md  Readme.md  __init__.py  config.py  pyproject.toml  tracing.py  validator.py
BinaryOptionsToolsV2/BinaryOptionsToolsV2/.github/workflows/: CI.yml
BinaryOptionsToolsV2/BinaryOptionsToolsV2/BinaryOptionsToolsV2/: __init__.py  config.py
BinaryOptionsToolsV2/BinaryOptionsToolsV2/BinaryOptionsToolsV2/pocketoption/: __init__.py  asynchronous.py  asyncronous.py  synchronous.py  syncronous.py
BinaryOptionsToolsV2/BinaryOptionsToolsV2/pocketoption/: __init__.py  asynchronous.py  asyncronous.py  synchronous.py  syncronous.py
BinaryOptionsToolsV2/BinaryOptionsToolsV2/src/: logs.rs  pocketoption.rs  stream.rs
BinaryOptionsToolsV2/BinaryOptionsToolsV2/tests/: test.py  test_sync.py
BinaryOptionsToolsV2/crates/binary_options_tools/: Cargo.toml
BinaryOptionsToolsV2/python/BinaryOptionsToolsV2/: BinaryOptionsToolsV2.pyi  __init__.py  config.py  tracing.py  validator.py
BinaryOptionsToolsV2/python/BinaryOptionsToolsV2/pocketoption/: asynchronous.py  synchronous.py
BinaryOptionsToolsV2/rust/: Cargo.toml  build.rs
BinaryOptionsToolsV2/rust/src/: config.rs  error.rs  framework.rs  logs.rs  pocketoption.rs  validator.rs
BinaryOptionsToolsV2/src/: config.rs  error.rs  framework.rs  lib.rs  logs.rs  pocketoption.rs  stream.rs  validator.rs
BinaryOptionsToolsV2/tests/: reproduce_race.py  test_basic.py  test_sync.py
crates/binary_options_tools/: Cargo.toml  Readme.md
crates/binary_options_tools/data/: expert_options_regions.json  pocket_options_regions.json
crates/binary_options_tools/examples/: pending_trades_example.rs  test_demo.rs
crates/binary_options_tools/src/: config.rs  error.rs  lib.rs  validator.rs
crates/binary_options_tools/src/expertoptions/: action.rs  client.rs  connect.rs  error.rs  mod.rs  regions.rs  state.rs  types.rs
crates/binary_options_tools/src/framework/: market.rs  mod.rs  virtual_market.rs
crates/binary_options_tools/src/pocketoption/: candle.rs  connect.rs  error.rs  pocket_client.rs  regions.rs  ssid.rs  state.rs  types.rs  utils.rs  validators.rs
crates/binary_options_tools/src/pocketoption_pre/: candle.rs  connect.rs  error.rs  mod.rs  pocket_client.rs  ssid.rs  state.rs  types.rs  utils.rs
crates/binary_options_tools/src/utils/: mod.rs  serialize.rs
crates/binary_options_tools/tests/: assets3.json  comprehensive_pocketoption_tests.rs  deals_module_cleanup.rs  expert_multiple_actions.json  history_verification_tests.rs  pending_trades_cleanup.rs  pocketoption_client_tests.rs  raw_module_tests.rs  trade_state_regression.rs  validator_tests.rs
crates/bindings_pyo3/: Cargo.toml  LICENSE  Readme.md  build.rs
crates/bindings_pyo3/src/: config.rs  error.rs  framework.rs  lib.rs  logs.rs  pocketoption.rs  validator.rs
crates/bindings_uniffi/: .gitignore  Cargo.toml  README.md  build.rs
crates/bindings_uniffi/bo2_macros/: Cargo.toml
crates/bindings_uniffi/bo2_macros/src/: doc.rs  lib.rs
crates/bindings_uniffi/src/: error.rs  test.rs  tracing.rs  utils.rs
crates/core/: Cargo.toml  LICENSE  README.md  readme.md
crates/core-pre/: Cargo.toml  README.md
crates/core-pre/docs/: testing-framework.md
crates/core-pre/examples/: echo_client.rs  middleware_example.rs  testing_echo_client.rs
crates/core-pre/src/: builder.rs  callback.rs  client.rs  connector.rs  error.rs  lib.rs  middleware.rs  reimports.rs  signals.rs  statistics.rs  testing.rs  traits.rs
crates/core-pre/src/utils/: mod.rs  stream.rs  tracing.rs
crates/core-pre/tests/: middleware_tests.rs  testing_wrapper_tests.rs
crates/core/data/: batching.rs  client2.rs  client_enhanced.rs  connection.rs  events.rs  websocket_config.rs
crates/core/docs/: testing-framework.md
crates/core/macros/: Cargo.toml
crates/core/macros/src/: rule.rs
crates/core/src/: client.rs  constants.rs  error.rs  lib.rs  message.rs  middleware.rs  reimports.rs  rules.rs  signals.rs  traits.rs
crates/core/src/general/: client.rs  config.rs  mod.rs  send.rs  stream.rs  traits.rs  types.rs  validate.rs
crates/core/src/utils/: stream.rs  time.rs  tracing.rs
crates/core/tests/: rule_macro_tests.rs  runner_command_tests.rs  stream_tests.rs  testing_wrapper_tests.rs  two_step_standalone.rs
crates/macros/: Cargo.toml
crates/macros/examples/: action_example.rs
crates/macros/src/: action.rs  config.rs  deserialize.rs  lib.rs  region.rs  serialize.rs  timeout.rs
crates/macros/src/impls/: mod.rs  module_impl.rs
tests/rust/: Cargo.toml  comprehensive_pocketoption_tests.rs  expert_multiple_actions.json  history_verification_tests.rs  profile.json  test_ssid_debug.rs  update_history_new_fast.json
(+661 files in other folders)
