[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/core-pre",
    "crates/macros",
    "crates/binary_options_tools",
    "BinaryOptionsToolsV2/rust",
    "BinaryOptionsToolsUni",
]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true
lto = false
codegen-units = 256

