[package]
name = "binary_options_tools_uni"
version = "0.1.0"
edition = "2024"

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"


[lib]
name = "binary_options_tools_uni"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"] }
binary-options-tools = { path = "../crates/binary_options_tools" }
tokio = { version = "1.47.1", features = ["full"] }
thiserror = "2.0.14"
rust_decimal = "1.37.2"
futures-util = "0.3.31"
uuid = { version = "1.10.0", features = ["v4", "serde", "fast-rng"] }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }
