[package]
name = "binary_options_tools"
version = "0.2.1"
edition = "2021"
authors = ["ChipaDevTeam"]
description = "High-level library for binary options trading automation. Supports PocketOption and ExpertOption with real-time data streaming, WebSocket API access, and automated trading strategies."
license-file = "LICENSE"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
readme = "Readme.md"
keywords = ["binary-options", "pocketoption", "trading", "expertoption", "automation"]
categories = ["api-bindings", "asynchronous"]
include = ["src/**/*", "data/**/*", "Cargo.toml", "Readme.md", "LICENSE"]

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
# binary-options-tools-core = { path = "../core", version = "0.2.0" }
# trading-macros = { path = "../macros" }
futures-util = "0.3.32"
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["rustls-tls-webpki-roots", "connect", "handshake"] }
url = "2.5.8"
uuid = { version = "1.23.0", features = ["v4", "fast-rng", "serde"] }
binary-options-tools-core = { path = "../core", version = "0.2.0" }
binary-options-tools-macros = { path = "../macros", version = "0.2.0" }
rand = "0.10.1"
tracing = "0.1.44"
rust_decimal = { version = "1.41.0", features = ["serde", "macros", "serde-with-float"] }
rust_decimal_macros = "1.40.0"
ryu = "1.0"
thiserror = "2.0.18"
regex = "1.12.3"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
rustls-native-certs = "0.8.3"
php_serde = "0.6.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
kanal = "0.1.1"

