[package]
name = "binary_options_tools_uni"
version = "0.1.0"
edition = "2021"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
description = "UniFFI bindings for binary-options-tools. Enables multi-language support (Kotlin, Swift, Python) for cross-platform binary options trading automation."
keywords = ["binary-options", "uniffi", "cross-platform", "trading"]
categories = ["api-bindings"]
license-file = "../../LICENSE"

[features]
default = ["python", "swift", "go"]
kotlin = []
swift = []
csharp = []
go = []
ruby = []
python = []
javascript = []

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"


[lib]
name = "binary_options_tools_uni"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { workspace = true }
binary_options_tools = { path = "../binary_options_tools", version = "0.2.1" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
rust_decimal = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
bo2_macros = { version = "0.1.0", path = "bo2_macros" }
url = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
