[package]
name = "core-pre"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
futures-util = "0.3"
kanal = "0.1.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tracing = "0.1.41"
