[package]
name = "binary-options-tools-core"
version = "0.2.0"
edition = "2021"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
readme = "README.md"
description = "Low-level WebSocket client and protocol handler for binary options trading. Core foundation providing connection management, message routing, and async communication primitives."
keywords = ["async", "binary-options", "tokio", "trading", "websocket"]
categories = ["api-bindings", "asynchronous", "network-programming"]
license-file = "LICENSE"

[dependencies]
async-trait = "0.1.89"
futures-util = "0.3"
kanal = "0.1.1"
rand = "0.10.1"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol_str = { version = "0.3.6", features = ["serde"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time"
] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-webpki-roots"
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
binary-options-tools-core-macros = { path = "macros", version = "0.1.0" }
