[package]
name = "integration-tests"
version = "0.2.12"
edition = "2021"

[dependencies]
binary_options_tools = { path = "../../crates/binary_options_tools" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
rust_decimal = "1.42"
rust_decimal_macros = "1.40"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
chrono = "0.4"
tracing-subscriber = "0.3"

[[test]]
name = "comprehensive_pocketoption_tests"
path = "comprehensive_pocketoption_tests.rs"
