[package]
name = "binary-options-tools-core-macros"
version = "0.2.13"
edition = "2024"
authors = ["ChipaDevTeam"]
repository = "https://gitlab.chipatrade.com/chipadevorg/BinaryOptionsTools-v2"
description = "Proc-macro utilities for binary-options-tools-core"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
zyn = { workspace = true, features = ["diagnostics", "ext"] }
