[package]
name = "binary-options-tools-core"
version = "0.2.0"
edition = "2021"
authors = ["ChipaDevTeam"]
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
homepage = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
documentation = "https://chipadevteam.github.io/BinaryOptionsTools-v2/"
readme = "README.md"
description = "Low-level WebSocket client and protocol handler for binary options trading. Core foundation providing connection management, message routing, and async communication primitives."
keywords = ["async", "binary-options", "tokio", "trading", "websocket"]
categories = ["api-bindings", "asynchronous", "network-programming"]
license-file = "LICENSE"

[dependencies]
async-trait = { workspace = true }
futures-util = { workspace = true }
kanal = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { version = "0.3.6", features = ["serde"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "time"
] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
binary-options-tools-core-macros = { path = "macros", version = "0.1.0" }
